--- a/Widly/Views/Customers/CustomerForm.cshtml
+++ b/Widly/Views/Customers/CustomerForm.cshtml
@@ -37,6 +37,11 @@
     </div>
 
     @Html.HiddenFor(m => m.Customer.Id)
+    @Html.AntiForgeryToken()
 
     <button type="submit" class="btn btn-primary">Save</button>
 }
+@section scripts
+{
+    @Scripts.Render("~/bundles/jqueryval")
+    }
